Fix: Side scroll individually and hidden scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,15 @@
   bottom: 100%;
   left: 50%;
   transform: translateX(-50%);
-
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
